--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "lint:md": "markdownlint '**/*.md' --ignore node_modules --ignore docs/.vitepress",
+    "lint:md:fix": "markdownlint '**/*.md' --ignore node_modules --ignore docs/.vitepress --fix",
+    "check-links": "markdown-link-check docs/**/*.md --config .markdown-link-check.json",
+    "test": "npm run docs:build"
   },
   "repository": {
     "type": "git",
@@ -20,6 +24,8 @@
   },
   "homepage": "https://github.com/vsmenu/vsmenu-docs#readme",
   "devDependencies": {
+    "markdown-link-check": "^3.12.2",
+    "markdownlint-cli": "^0.42.0",
     "mermaid": "^11.12.1",
     "vitepress": "^1.6.4",
     "vue": "^3.5.24"
