docs(architecture): implementa 4 issues do milestone v0.2
Implementação parcial (33%) do Milestone v0.2 - Documentação de Arquitetura

Issues implementadas:
- Issue #21: Overview da Arquitetura do Sistema (CRITICAL)
- Issue #22: Diagrama de Componentes Arquiteturais
- Issue #23: Architecture Decision Records (ADRs)
- Issue #29: Arquitetura de Segurança (CRITICAL)

## Detalhes das Implementações

### Issue #21 - Overview da Arquitetura
- Visão completa do ecossistema (8 aplicações)
- Diagrama de contexto C4
- Detalhamento de componentes principais
- Princípios arquiteturais (DDD, Clean Architecture, SOLID)
- Stack tecnológica resumida
- Comunicação entre componentes
- Links para documentação relacionada

### Issue #22 - Diagramas de Componentes
- Diagrama C4 Level 2: Containers
- Diagrama C4 Level 3: Components (API Laravel)
- Diagrama C4 Level 3: Components (Desktop Electron)
- Diagrama C4 Level 3: Components (Delivery Web)
- Diagrama de Deploy (Google Cloud Platform)
- Diagrama de Fluxo de Dados
- Diagrama de Segurança em Camadas

### Issue #23 - ADRs
- ADR-001: Escolha do Framework Backend (Laravel)
- ADR-002: Arquitetura Offline-First no Desktop
- ADR-003: Multi-tenancy por Subdomínio
- ADR-004: Flutter para Mobile Apps
- ADR-005: Vue.js 3 para Frontend Web
- ADR-006: Google Cloud Platform (GCP)
- ADR-007: Clean Architecture + DDD no Backend
- ADR-008: Event Sourcing para Sincronização
- ADR-009: MySQL como Banco de Dados Principal
- ADR-010: Multirepo vs Monorepo

### Issue #29 - Arquitetura de Segurança
- Autenticação (Laravel Sanctum, passwords, MFA)
- Autorização (RBAC, policies, multi-tenancy)
- Proteção de dados (encryption at rest/transit, validation)
- Segurança de API (rate limiting, CORS, security headers)
- Segurança de infraestrutura (IAM, secrets management, VPC)
- Segurança mobile/desktop (secure storage, certificate pinning)
- Compliance (LGPD/GDPR, audit logs)
- Incident response

## Correções Técnicas

- Fix: Configura Mermaid para renderização d

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "markdownlint-cli": "^0.42.0",
     "mermaid": "^11.12.1",
     "vitepress": "^1.6.4",
+    "vitepress-plugin-mermaid": "^2.0.17",
     "vue": "^3.5.24"
   }
 }
